@@ -1590,6 +1590,7 @@ acl_options_t* parse_acl_info(region_type* region, char* ip, const char* key)
 	acl->use_axfr_only = 0;
 	acl->allow_udp = 0;
 	acl->ixfr_disabled = 0;
+	acl->bad_xfr_count = 0;
 	acl->key_options = 0;
 	acl->is_ipv6 = 0;
 	acl->port = 0;
