@@ -1,3 +1,7 @@
+27 Jun 2013: Matthijs
+	- Better XFR checking, fallback to AXFR (if allowed) if three
+	  malformed XFR packets have been seen.
+
 25 Jun 2013: Matthijs
 	- Rename --enable-eui-rrtypes to --enable-draft-rrtypes.
 
